--- a/adminpage/navbar.html
+++ b/adminpage/navbar.html
@@ -2,9 +2,9 @@
   <div class="container">
     <a class="navbar-brand" href="https://youtu.be/HkYa5t9XB_Q?si=oxc655qQ25t5Ci2P">
       <img src="../assets/logo brand.jpg" alt="Logo" width="40" height="40" class="me-2">
-      <strong>FUFASTORE</strong>
+      <strong style="color: white;">FUFASTORE</strong>
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -12,14 +12,26 @@
         <input class="form-control me-2" type="search" placeholder="Woi Cari" aria-label="Search">
         <button class="btn btn-light" type="submit">Cari</button>
       </form>
-        <ul class="navbar-nav ms-auto">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
           <a class="nav-link text-white active" aria-current="page" href="beranda.php">Beranda</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link text-white" href="produk.php">Produk</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link text-white" href="pembelian.php">Pembelian</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link text-white" href="admin.php">Admin</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link text-white" href="dataorangmengklik.php">Data</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link text-white" href="add_product.php">Upload</a>
-          </ul>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
