--- a/navbar/navbar.html
+++ b/navbar/navbar.html
@@ -4,7 +4,7 @@
       <img src="assets/logo brand.jpg" alt="Logo" width="40" height="40" class="me-2">
       <strong style="color: white;">FUFASTORE</strong>
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
@@ -12,13 +12,24 @@
         <input class="form-control me-2" type="search" placeholder="Woi Cari" aria-label="Search">
         <button class="btn btn-light" type="submit">Cari</button>
       </form>
-        <ul class="navbar-nav ms-auto">
+      <ul class="navbar-nav ms-auto">
+        <li class="nav-item">
           <a class="nav-link text-white active" aria-current="page" href="beranda.php">Beranda</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link text-white" href="produk.php">Produk</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link text-white" href="pembelian.php">Pembelian</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link text-white" href="admin.php">Admin</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link text-white" href="index.php">Login</a>
+        </li>
+      </ul>
     </div>
   </div>
 </nav>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
